--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- /home/ali.marwan@ad.cyshield/GIT-OPS-FLUX/GitOps-fluxCD/apps/base/nginx
-- /home/ali.marwan@ad.cyshield/GIT-OPS-FLUX/GitOps-fluxCD/apps/Prod/nginx
+- base/nginx
+- Prod/nginx
 
 
