--- a/cluster/flux-kustomization.yaml
+++ b/cluster/flux-kustomization.yaml
@@ -12,17 +12,19 @@ spec:
   prune: true
   validation: client
 
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
-# kind: Kustomization
-# metadata:
-#   name: flux-system
-#   namespace: flux-system
-# spec:
-#   interval: 1m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: "./infra"
-#   prune: true
-#   timeout: 1m
-# ---
+---
+
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: flux-system
+  namespace: flux-system
+spec:
+  interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infra
+  prune: true
+  validation: client
+
