--- a/cluster/flux-kustomization.yaml
+++ b/cluster/flux-kustomization.yaml
@@ -17,7 +17,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
-  name: flux-system
+  name: infra
   namespace: flux-system
 spec:
   interval: 1m
