--- a/cluster/flux-kustomization.yaml
+++ b/cluster/flux-kustomization.yaml
@@ -12,21 +12,21 @@ spec:
   prune: true
   validation: client
 
----
+# ---
 
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
-kind: Kustomization
-metadata:
-  name: infra
-  namespace: flux-system
-spec:
-  interval: 1m
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  path: ./infra
-  prune: false
-  validation: client
+# apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+# kind: Kustomization
+# metadata:
+#   name: infra
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   path: ./infra
+#   prune: false
+#   validation: client
 
 
 
