--- a/cluster/flux-kustomization.yaml
+++ b/cluster/flux-kustomization.yaml
@@ -27,6 +27,22 @@ spec:
   path: ./infra
   prune: true
 
+---
+
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+kind: Kustomization
+metadata:
+  name: sources
+  namespace: flux-system
+spec:
+  interval: 1m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./sources
+  prune: true
+
+
 
 
 
