--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -21,5 +21,5 @@ spec:
     name: py-app
     namespace: flux-system
   policy:
-    semver: {}
-  tagPattern: "main-*"
+    semver:
+      range: '>=7'
