--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -11,7 +11,7 @@ spec:
 
 ---
 
-apiVersion: image.toolkit.fluxcd.io/v1beta2
+apiVersion: image.toolkit.fluxcd.io/v1alpha1
 kind: ImagePolicy
 metadata:
   name: py-app
@@ -21,5 +21,10 @@ spec:
     name: py-app
     namespace: flux-system
   policy:
-    semver:
-      range: '>=7'
+    semver: {}
+  automated: true
+  tagPattern: "main-*"
+  registry:
+    url: https://index.docker.io/v1/
+    credentialsRef:
+      name: dockerhub-credentials
