--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -11,7 +11,7 @@ spec:
 
 ---
 
-apiVersion: image.toolkit.fluxcd.io/v1alpha1
+apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImagePolicy
 metadata:
   name: py-app
