--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   image: docker.io/alii2121/py-app
-  interval: 30sec
+  interval: 30s
   secretRef:
     name: docker-sec
 
