update image policy

--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -22,6 +22,7 @@ spec:
     namespace: flux-system
   filterTags:
     pattern: '^main-[a-f0-9]'
+    extract: '[a-f0-9]'
   policy:
     numerical:
       order: asc
