--- a/sources/image-repo.yaml
+++ b/sources/image-repo.yaml
@@ -22,7 +22,7 @@ spec:
     namespace: flux-system
   filterTags:
     pattern: '^main-[a-f0-9]'
-    extract: '[a-f0-9]'
+    extract: '7'
   policy:
     numerical:
       order: asc
