--- a/apps/Prod/py-app/kustomization.yaml
+++ b/apps/Prod/py-app/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: prod
 resources:
-- deployment.yaml
-- service.yaml
+- ../../base/py-app
 
-
+replicas:
+- name: py-app
+  count: 2
