--- a/apps/base/py-app/kustomization.yaml
+++ b/apps/base/py-app/kustomization.yaml
@@ -1,9 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: dev
 resources:
-- ../../base/nginx
+- deployment.yaml
+- service.yaml
 
-replicas:
-- name: nginx
-  count: 1
+
+
