--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- base/nginx
-- Prod/nginx
-- Dev/nginx
+- base/py-app
+- Prod/py-app
+- Dev/py-app
 
 
