--- a/sources/image-automation.yaml
+++ b/sources/image-automation.yaml
@@ -15,7 +15,7 @@ spec:
     commit:
       author:
         email: fluxcdbot@users.noreply.github.com
-        name: fluxcdbot
+        name: fluxcdbot-user
       messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
     push:
       branch: main
