--- a/apps/base/py-app/deployment.yaml
+++ b/apps/base/py-app/deployment.yaml
@@ -15,9 +15,8 @@ spec:
     spec:
       containers:
       - name: py-app
-        envFrom:
-        - configMapRef:
-            name: my-configmap
         image: alii2121/py-app:main-7 # {"$imagepolicy": "flux-system:py-app"}
         ports:
         - containerPort: 8000
+      imagePullSecrets:
+      - name: docker-sec
