--- a/apps/base/redis/kustomization.yaml
+++ b/apps/base/redis/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- base/py-app
-- base/redis
-- Prod/py-app
-- Dev/py-app
+- deployment.yaml
+- svc-redis.yaml
+
+
 
 
