--- a/apps/base/py-app/configmap.yaml
+++ b/apps/base/py-app/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: my-configmap
+  namespace: default
 data:
   ENVIRONMENT: "DEV"
   HOST: "localhost"
