--- a/apps/Prod/Image-Automation/kustomization.yaml
+++ b/apps/Prod/Image-Automation/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- prometheus.yaml
-- grafana.yaml
-
+- image-automation.yaml
+- image-repo.yaml
 
