--- a/sources/grafana.yaml
+++ b/sources/grafana.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: monitoring
 spec:
   interval: 1m
-  url: oci://registry-1.docker.io/bitnamicharts/grafana
+  url: https://charts.bitnami.com/bitnami
