--- a/sources/grafana.yaml
+++ b/sources/grafana.yaml
@@ -1,8 +1,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: grafana
-  namespace: monitoring
+  name: podinfo
+  namespace: default
 spec:
+  type: oci
   interval: 1m
-  url: https://charts.bitnami.com/bitnami
+  url: oci://registry-1.docker.io/bitnamicharts/grafana
