--- a/infra/base/grafana-release.yaml
+++ b/infra/base/grafana-release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 1m
   chart:
     spec:
-      chart: grafana
+      chart: bitnami/grafana
       version: '9.3.2'
       sourceRef:
         kind: HelmRepository
