--- a/sources/grafana.yaml
+++ b/sources/grafana.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: podinfo
-  namespace: default
+  name: grafana
+  namespace: monitoring
 spec:
   type: oci
   interval: 1m
