--- a/infra/base/grafana-release.yaml
+++ b/infra/base/grafana-release.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: grafana
-  namespace: monitoring
+  namespace: default
 spec:
   interval: 1m
   chart:
@@ -12,7 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: grafana
-        namespace: monitoring
+        namespace: default
       interval: 1m
   values:
     replicaCount: 1
