--- a/sources/grafana.yaml
+++ b/sources/grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: grafana
-  namespace: default
+  namespace: monitoring
 spec:
   interval: 1m
   url: https://grafana.github.io/helm-charts
